zokrates_cli/examples/compile_errors/struct_member_type_mismatch_field.zok
struct Foo {
    field[2] values;
}

struct Bar {
    Foo foo;
    field bar;
}

def main() {
    Bar s = Bar {
        foo: Foo { values: [1] },
        bar: 0,
    };
    field b = s.bar;
    return;
}
